# moneydisc

./: .gitignore  CLAUDE.local.md  Makefile  README.md  pyproject.toml
notebooks/: analyze_statistics.py
src/moneydisc/: __init__.py
src/moneydisc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/moneydisc/analysis/: compute_stats.py  config.py  stats_bank.py
src/moneydisc/data_ingestion/: download_google_drive.py
src/moneydisc/visualization/: __init__.py  field.py
tests/: test_compute_stats.py  test_download_google_drive.py  test_stats_bank.py
tests/fixtures/: Defensive Blocks vs. Heidees 2025-05-18_20-38-33.csv  Defensive Blocks vs. Tchac 2025-05-30_17-24-00.csv  Passes vs. Heidees 2025-05-18_20-38-33.csv  Passes vs. Tchac 2025-05-30_17-24-00.csv  Player Stats vs. Heidees 2025-05-18_20-38-33.csv  Player Stats vs. Tchac 2025-05-30_17-24-00.csv  Points vs. Heidees 2025-05-18_20-38-33.csv  Points vs. Tchac 2025-05-30_17-24-00.csv  Possessions vs. Heidees 2025-05-18_20-38-33.csv  Possessions vs. Tchac 2025-05-30_17-24-00.csv
