[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "moneydisc"
version = "0.1.0"
description = "Utilities for downloading and analyzing ultimate frisbee game data."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "gdown==5.2.0",
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "statsmodels>=0.14",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
